# fix-license-header

./: .bumpversion.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  fix-license-header.code-workspace  pyproject.toml  setup.cfg  setup.py
fix_license_header/: fix_license_header.py
